<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardBackgroundColor="?attr/backgroundWhite"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/size10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size14dp"
        android:paddingBottom="@dimen/size14dp"
        android:paddingStart="@dimen/size20dp"
        android:paddingEnd="@dimen/size14dp">

        <TextView
            android:id="@+id/txt_tilte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/svn_avo_bold"
            android:text="@string/content_nop_bai"
            android:textColor="?attr/colorTextBlack"
            android:textSize="@dimen/size18sp" />

        <TextView
            android:layout_marginTop="@dimen/size10dp"
            android:id="@+id/txt_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tilte"
            android:fontFamily="@font/svn_avo"
            android:text="@string/title_nop_bai"
            android:textColor="?attr/colorTextBlack"
            android:textSize="@dimen/size16sp" />

        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/txt_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_content"
            android:layout_marginTop="@dimen/size32dp"
            android:layout_toStartOf="@id/txt_no"
            android:fontFamily="@font/svn_avo"
            android:padding="@dimen/size12dp"
            android:text="@string/content_nop_bai"
            android:textColor="?attr/colorTextBlack"
            android:layout_marginEnd="@dimen/size16dp" />

        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/txt_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/size30dp"
            android:layout_marginEnd="@dimen/size20dp"
            android:fontFamily="@font/svn_avo"
            android:padding="@dimen/size12dp"
            android:text="@string/cancel_2"
            android:textColor="?attr/colorTextBlack" />
        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/txt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_content"
            android:layout_marginTop="@dimen/size32dp"
            android:fontFamily="@font/svn_avo"
            android:padding="@dimen/size12dp"
            android:text="@string/save"
            android:textColor="?attr/colorTextBlack"
            android:layout_marginEnd="@dimen/size16dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>