<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/size12dp"
    android:layout_marginRight="@dimen/size12dp"
    app:cardBackgroundColor="?attr/backgroundWhite"
    app:cardCornerRadius="@dimen/size10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/size12dp"
        android:paddingBottom="@dimen/size16dp">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/svn_avo"
            android:text="@string/result"
            android:textColor="?attr/colorTextBlack"
            android:textSize="@dimen/size18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size1dp"
            android:layout_marginTop="@dimen/size18sp"
            android:background="?attr/backgroundBlack" />

        <TextView
            android:gravity="center"
            android:id="@+id/txt_number_correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size24dp"
            android:fontFamily="@font/svn_avo"
            android:text="0/20"
            android:textColor="?attr/colorTextBlack"
            android:textSize="@dimen/size24sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/txt_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size24dp"
            android:fontFamily="@font/svn_avo"
            android:text="10 điểm"
            android:textColor="?attr/colorTextBlack"
            android:textSize="@dimen/size24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size30dp"
            android:layout_marginTop="@dimen/size20dp"
            android:layout_marginRight="@dimen/size30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_new_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/svn_avo"
                    android:padding="@dimen/size12dp"
                    android:text="@string/new_exam"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_see_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/svn_avo"
                    android:padding="@dimen/size12dp"
                    android:text="@string/see_result"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size16sp" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <TextView
            android:textColor="?attr/colorGray2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/link_thunder" />
    </LinearLayout>

</androidx.cardview.widget.CardView>